assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "UTF-8";

/* Overrides */

@import "colors";
@import "variables";


/* Materialize Imports*/

// Color
@import "components/color-variables";
@import "components/color-classes";

// Variables;
@import "components/variables";

// Reset
@import "components/normalize";

// components
@import "components/global";
@import "components/badges";
@import "components/icons-material-design";
@import "components/grid";
@import "components/navbar";
@import "components/typography";
@import "components/transitions";
@import "components/cards";
@import "components/toast";
@import "components/tabs";
@import "components/tooltip";
@import "components/buttons";
@import "components/dropdown";
@import "components/waves";
@import "components/modal";
@import "components/collapsible";
@import "components/chips";
@import "components/materialbox";
@import "components/forms/forms";
@import "components/table_of_contents";
@import "components/sidenav";
@import "components/preloader";
@import "components/slider";
@import "components/carousel";
@import "components/tapTarget";
@import "components/pulse";
@import "components/datepicker";
@import "components/timepicker";


// keep the original minima syntax highlighting
@import "minima/syntax-highlighting";

/* Main Styles */

// Links
.page-content {
  a {
    &:hover {
      color: darken($link-color, 10%);
    }
  }
}

.page-header, .page-footer {
  a {
    color: color("light-blue", "lighten-4");

    &:hover {
      color: color("light-blue", "lighten-5");
    }
  }
}

// Touch up the main post listing layout
.post-listing {
  .row {
    margin-bottom: 0;
  }
  .col {
    margin-bottom: 20px;
    @media #{$medium-and-up} {
      margin-bottom: 35px;
    }
  }

  .card-title {
    margin-top: 0;
  }
}
// 2-coloumn grid of cards that fill empty vertical space
@media #{$medium-and-up} {
  .fill-height {
    display: flex;
    margin-bottom: 35px;

    > .col {
      flex: 1 1 auto;

      .card {
        height: 100%;
      }
    }
  }
}

// fix awkward lack of padding at the bottom of a post/page
.post-content, .page-content {
  margin-bottom: 30px;
}

